# InsFEM

./: LICENSE  README.md
Executables/Unix/: InspiraFEM.conf  InspiraFEM.conf.dep  InspiraFEM.inc  InspiraFEM.sh  Makefile  SLEPc.inc  VTK.inc  configure  insFEM
Scripts/Gid/: GidPostProcessor.pl
Scripts/Gnuplot/: add_values.py  multignuplot.py  multiplot.py  plot_frc.py  plot_tp.py
Scripts/GroupPartitioner/: GroupPartitioner.pl  caseClean.pl  functionLimits.pm  groupTools.pm  linkFiles.pl  readGidMods.pm
Scripts/Memcheck/: Memchecker
Scripts/NaivePartitioner/: NaivePartitioner.pl  NaivePartitioner.plDoubleLinkedList  NaivePartitioner.plOpenPrintClose
Scripts/Preprocessor/: Preprocessor.prep  Preprocessor_old.prep  ToIntel.prep
Scripts/TestModifier/: CaseModifier.pl  TestModifier.pl
Scripts/WeakScalabilityTester/: Recursive.pm  StrongScalabilityPlotter.pl  WeakScalabilityPlotter.pl  WeakScalabilityTester.pl
Scripts/vtkpost/: CMakeLists.txt  vtkc.cpp
Sources/ParallelLibraries/: Mod_EigenLibraryInterface.f90  Mod_EigenMatrixInterface.f90  Mod_GeneralParallelLibrary.f90  Mod_ParallelCommunicatorInterface.f90  Mod_ParallelLibraryInterface.f90  Mod_ParallelMatrixInterface.f90  Mod_ParallelOrderingInterface.f90  Mod_ParallelPartitionerInterface.f90
Sources/ReadWrite/: Mod_ReadWrite.f90  Mod_ReadWrite_F90.f90  Mod_ReadWrite_PETSc.f90
Sources/SpatialContainers/: Mod_Octree.f90  Test_OctTree.f90
Sources/base/: Mem2String.f90  Mod_BroadCastBuffer.f90  (+20 more)
Tests/: FileFindRule.pm  GlobText.pm  Naturally.pm  NumberCompare.pm  ParallelForkManager.pm  Tester.prep
(+8552 files in other folders)
